--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
     "version": "1.0.0",
     "description": "Node.js on Docker",
     "author": "First Last <first.last@example.com>",
-    "main": "main.js",
-    "type": "module",
+    "main": "dist/main.js",
     "scripts": {
-        "start": "node server.js",
-        "test": "echo Testing..."
+        "build": "tsc",
+        "start": "node dist/main.js",
+        "test": "jest"
     },
     "dependencies": {
         "express": "^4.16.1"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.16.0",
+        "@babel/preset-typescript": "^7.16.0",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.0.2",
+        "babel-jest": "^27.3.1",
+        "jest": "^27.3.1",
+        "typescript": "^4.4.4"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.[t|j]sx?$": "babel-jest"
+        }
     }
 }
