--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/jest": "^27.0.2",
         "babel-jest": "^27.3.1",
         "jest": "^27.3.1",
+        "prettier": "^2.4.1",
         "typescript": "^4.4.4"
     },
     "jest": {
