--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "main": "dist/main.js",
     "scripts": {
         "build": "tsc",
+        "dev": "ts-node-dev src/main.ts",
         "start": "node dist/main.js",
         "test": "jest"
     },
@@ -20,6 +21,7 @@
         "babel-jest": "^27.3.1",
         "jest": "^27.3.1",
         "prettier": "^2.4.1",
+        "ts-node-dev": "^1.1.8",
         "typescript": "^4.4.4"
     },
     "jest": {
